<resources>
    <string name="app_name">wap</string>
    <string name="title_activity_mapping">MappingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tracking">TrackingActivity</string>
    <string name="Tracking">Tracking</string>
    <string name="Asset">Assets</string>
    <string name="login_id">Login ID</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="testing" />
    <string name="Testing">Testing</string>
    <string name="mapping">Mapping</string>
    <string name="main">Main</string>
    <string name="click_to_register">Don\'t have an account yet? Click here to register.</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>


</resources>